--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- CSS -->
-    <!-- <link rel="stylesheet" href="./src/styles/global.css"> -->
     <link rel="stylesheet" href="/src/styles/main.css">
 </head>
 
@@ -36,11 +35,11 @@
             </button>
         </div>
     </section>
-    <!-- <section class="pokemonCard">
-        <h1 class="pokemonName">BulbaSaur</h1>
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="">
+
+    <section id="pokemonDetail" class="pokemon-detail-modal">
+        <!-- O conteúdo do card de detalhes será inserido aqui dinamicamente -->
     </section>
- -->
+
     <script src="./src/scripts/pokemon-model.js"></script>
     <script src="./src/scripts/poke-api.js"></script>
     <script src="./src/scripts/main.js"></script>
